--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*Utilyti*/
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +12,24 @@
     --text-white: rgba(255, 255, 255, 1);
     --text-grey: rgba(113, 113, 113, 1);
     --lime-green: rgba(173, 255, 47, 1); 
+    --font-m: 12px;
+    --font-l: 15px;
+    --font-s: 11px;
 }
+.d-flex{
+    display: flex;
+}
+.just-end{
+    justify-content: end;
+}
+.just-center{
+    justify-content: center;
+}
+
+.align-center {
+    align-items: center;
+}
+
 .debug {
     border: 1px solid black;
     min-height: 50px;
@@ -21,11 +39,15 @@ html {
 }
 body {
     font-family: 'Montserrat', sans-serif;
+
 }
+/*end utlity*/
+/*Main*/
 .wrapper {
    width: 100%;
    height: 100vh; 
    background-color: black;
+   
 }
 main {
     width: 100%;
@@ -48,12 +70,36 @@ aside {
     background-color: rgba(0, 0, 0, 0.6);
     position: fixed;
     top: 0;
+    left:0;
     z-index: 800;
+   
+    padding-right: 20px;
+}
+.btn {
+    border: 1px solid;
+    border-radius: 25px;
+    padding: 0.5rem 2rem;
+    text-align: center;
+    height: 40px;
+    
+}
+.btn-white {
+    border-color: var(--text-white);
+}
+.btn-a-white {
+    color: var(--text-white);
+    text-decoration: none;
+    font-size: var(--font-m);
 }
 .inner-content {
     height: 100%;
     overflow-y: auto;
 }
+
+  
+   
+    
+
 footer {
     width: 100%;
     height: 95px;
