--- a/css/style.css
+++ b/css/style.css
@@ -300,8 +300,9 @@ aside {
     padding-top: 90px;
 }
 .nav-libres{
-    background-color:#141922
-}
+    background-color:#141922;
+z-index: 50;}
+
 
 .nav-libres ul li {
     padding-right: 1.8rem;
@@ -340,8 +341,115 @@ aside {
 footer {
     width: 100%;
     height: 90px;
-    background-color: yellow;
+    background-color: #282828;
     position: fixed;
     bottom: 0;
     z-index: 5000;
 }
+.control-bar {
+    color: var(--white);
+}
+
+
+.inner-control-bar {
+    height: 100%;
+    padding: 0 15px;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 3000;
+}
+
+.inner-control-bar-sx {
+    align-items: center;
+    flex-basis: 25%;
+}
+
+.inner-control-bar-center {
+    align-items: center;
+    flex-direction: column;
+    padding-left: 20px;
+    flex-basis: 50%;
+    gap: 10px;
+}
+
+.inner-control-bar-dx {
+    align-items: center;
+    flex-basis: 25%;
+    gap: 25px;
+    justify-content: flex-end;
+}
+
+.inner-control-bar-sx img {
+    width: 70px;
+    padding-right: 15px;
+}
+
+.favourite {
+    padding-left: 35px;
+    color: var(--lightgrey);
+    font-size: var(--font-l);
+}
+
+.favourite :first-child {
+    padding-right: 15px;
+}
+
+.control {
+    font-size: 1.5rem;
+    gap: 40px;
+    align-items: center;
+}
+
+.play {
+    font-size: 2.5rem;
+}
+
+.time-bar {
+    align-items: center;
+    font-weight: 600;
+}
+
+.bar {
+    height: 5px;
+    width: 600px;
+    border-radius: 20px;
+    background-color: var(--grey-med);
+    margin: 0 20px;
+    position: relative;
+}
+
+.bar:after {
+    display: block;
+    position: absolute;
+    content: '';
+    background: var(--light-grey);
+    height: 5px;
+    width: 250px;
+    border-radius: 20px 0 0 20px;
+}
+
+.inner-control-bar-dx i {
+    font-size: 1rem;
+}
+
+.vol {
+    height: 5px;
+    width: 120px;
+    border-radius: 20px;
+    background-color: var(--grey-med);
+    position: relative;
+}
+
+.vol:after {
+    display: block;
+    position: absolute;
+    content: '';
+    background: var(--light-grey);
+    height: 5px;
+    width: 30px;
+    border-radius: 20px 0 0 20px;
+}
+
+
+
+/* hover e animazioni */
